--- a/114.html
+++ b/114.html
@@ -64,7 +64,7 @@
 
 <nav>
     <!-- Barra de menú con 6 títulos -->
-    <a href="TIP120TU.pdf" target="_blank">Practica 1</a>
+    <a href="TIP120TU.PDF" target="_blank">Practica 1</a>
     <a href="https://www.google.com" target="_blank">Practica 2</a>
     <a href="https://www.google.com" target="_blank">Practica 3</a>
     <a href="https://www.google.com" target="_blank">Practica 4</a>
